include bind bits in build

--- a/mariacpp/CMakeLists.txt
+++ b/mariacpp/CMakeLists.txt
@@ -1,2 +1,3 @@
 file(GLOB HEADERS *.hpp)
 INSTALL(FILES ${HEADERS} DESTINATION include/mariacpp)
+INSTALL(FILES bits/bind.hpp DESTINATION include/mariacpp/bits)
