--- a/mariacpp/CMakeLists.txt
+++ b/mariacpp/CMakeLists.txt
@@ -1,3 +1,1 @@
-file(GLOB HEADERS *.hpp)
-INSTALL(FILES ${HEADERS} DESTINATION include/mariacpp)
-INSTALL(FILES bits/bind.hpp DESTINATION include/mariacpp/bits)
+INSTALL(DIRECTORY . DESTINATION include/mariacpp FILES_MATCHING PATTERN *.hpp)
