enable build params for msvc as well

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,7 @@ INCLUDE_DIRECTORIES(${MARIADB_INCLUDE_DIR} ${CMAKE_SOURCE_DIR})
 ADD_LIBRARY(mariacpp STATIC ${SRC})
 
 # windows clang-cl support
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang" AND "x${CMAKE_CXX_SIMULATE_ID}" STREQUAL "xMSVC")
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang" AND "x${CMAKE_CXX_SIMULATE_ID}" STREQUAL "xMSVC" OR MSVC)
     target_compile_options(mariacpp PUBLIC /EHa /Zc:__cplusplus /MTd -m64)
     add_link_options(/MTd)
     add_compile_definitions(WIN32)
@@ -33,4 +33,3 @@ INSTALL(TARGETS mariacpp
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   )
-
