--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,10 @@ SET(CMAKE_CXX_STANDARD 20)
 
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -v")
 
-SET(CPACK_PACKAGE_VERSION_MAJOR 1)
-SET(CPACK_PACKAGE_VERSION_MINOR 0)
-SET(CPACK_PACKAGE_VERSION_PATCH 1)
-SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-
-INCLUDE(${CMAKE_SOURCE_DIR}/cmake/FindMariaDB.cmake)
+find_library(MariaDBClient_LIBRARY
+  NAMES mariadbclient
+  REQUIRED
+  )
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 find_package(Threads REQUIRED)
@@ -48,22 +46,3 @@ enable_testing()
 add_subdirectory(mariacpp)
 add_subdirectory(src)
 add_subdirectory(test)
-
-SET(CPACK_GENERATOR "TGZ")
-SET(CPACK_SOURCE_GENERATOR "TGZ")
-SET(CPACK_PACKAGE_VENDOR "LINKO")
-SET(CPACK_PACKAGE_DESCRIPTION
-  "MariaCpp. A library for connecting to MariaDB and MySQL servers")
-STRING(TOLOWER ${CMAKE_SYSTEM_NAME} system_name)
-SET(CPACK_PACKAGE_FILE_NAME
-  "mariacpp-${CPACK_PACKAGE_VERSION}-${system_name}-${CMAKE_SYSTEM_PROCESSOR}")
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME
-  "mariacpp-${CPACK_PACKAGE_VERSION}-src")
-SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 1)
-SET(CPACK_SOURCE_IGNORE_FILES
-  .hg/
-  .hgignore
-  build/
-  ~$
-  )
-INCLUDE(CPack)
