make this stuff work on linux again and stuff
bind.cpp: apparently not all charconv std implementations support floats. oh, and fuck c++ < 20 I guess
mariadb_error.hpp: for some reason memcpy is in some kind of global namespace on windows so this just worked
time.hpp: some std libs now actually implement c++20 the new chrono durations
ma_time.c: apparently only the windows stdio.h has sscanf_s
cmake: more generic mariadb lib finding and stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,20 @@ SET(CMAKE_CXX_STANDARD 20)
 
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -v")
 
-find_library(MariaDBClient_LIBRARY
-  NAMES mariadbclient
-  REQUIRED
-  )
+find_path(MARIADB_INCLUDE_DIR
+    mysql.h
+    PATHS "${MARIADB_PATH}"
+    PATH_SUFFIXES mariadb include
+    REQUIRED)
+
+MESSAGE("-- Found mariadb include: ${MARIADB_INCLUDE_DIR}")
+
+find_library(MARIADB_LIBRARY
+    NAMES libmariadb mariadb
+    PATHS "${MARIADB_PATH}"
+    REQUIRED)
+
+MESSAGE("-- Found mariadb library: ${MARIADB_LIBRARY}")
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
 find_package(Threads REQUIRED)
