--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,13 +23,12 @@ ADD_LIBRARY(mariacpp STATIC ${SRC})
 
 # windows clang-cl support
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang" AND "x${CMAKE_CXX_SIMULATE_ID}" STREQUAL "xMSVC" OR MSVC)
-    target_compile_options(mariacpp PUBLIC /EHa /Zc:__cplusplus /MTd -m64)
-    add_link_options(/MTd)
-    add_compile_definitions(WIN32)
+  target_compile_options(mariacpp PUBLIC /EHa /Zc:__cplusplus /MTd -m64)
+  add_link_options(/MTd)
+  add_compile_definitions(WIN32)
 endif()
 
 INSTALL(TARGETS mariacpp
-  RUNTIME DESTINATION lib
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
-  )
+    RUNTIME DESTINATION lib
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib)
