various cmake build adjustments
just use system path instead of MARIADB_PATH being set in cmake params
build debug with postfix to allow both to easily be installed into the same directory
some improvements to msvc compile arg override (still waiting for a proper solution from cmake for this bs)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,6 @@ SET(CMAKE_CXX_STANDARD 20)
 
 find_path(MARIADB_INCLUDE_DIR
     mysql.h
-    PATHS "${MARIADB_PATH}"
     PATH_SUFFIXES mariadb include
     REQUIRED)
 
@@ -31,7 +30,7 @@ MESSAGE("-- Found mariadb include: ${MARIADB_INCLUDE_DIR}")
 
 find_library(MARIADB_LIBRARY
     NAMES libmariadb mariadb
-    PATHS "${MARIADB_PATH}"
+    PATH_SUFFIXES mariadb lib
     REQUIRED)
 
 MESSAGE("-- Found mariadb library: ${MARIADB_LIBRARY}")
