adjustments to the cmake build to support asan and debug suffix and other tweaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,4 +52,6 @@ endif()
 enable_testing()
 add_subdirectory(mariacpp)
 add_subdirectory(src)
-add_subdirectory(test)
+if(CMAKE_PROJECT_NAME STREQUAL mariacpp AND BUILD_TESTING)
+  add_subdirectory(test)
+endif()
